<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">toppings</string>
    <string name="quantity" translatable="false">quantity</string>
    <string name="whipped_cream" translatable="false">Whipped Cream</string>
    <string name="initial_quantity_value">0</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="order">order</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_name">Name: <xliff:g id="name" exaple="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>


</resources>
